--- a/Aye's Portfolio/index.html
+++ b/Aye's Portfolio/index.html
@@ -20,7 +20,11 @@
   
       <main>
         <div class="container">
-          <img src="pic/welcome.mp4" alt="Welcome" class="about">
+          <video controls class="about" poster="pic/poster.jpg">
+            <source src="pic/welcome.mp4" type="video/mp4">
+            <source src="pic/welcome.webm" type="video/webm">
+            Your browser does not support the video tag.
+          </video>
         </div>
 
  
