--- a/Aye's Portfolio/index.html
+++ b/Aye's Portfolio/index.html
@@ -20,11 +20,7 @@
   
       <main>
         <div class="container">
-          <video controls class="about" poster="pic/poster.jpg">
-            <source src="pic/welcome.mp4" type="video/mp4">
-            <source src="pic/welcome.webm" type="video/webm">
-            Your browser does not support the video tag.
-          </video>
+         <img src="pic/welcome1.png" alt="Welcome" class="about">
         </div>
 
  
