--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
       <main>
         <div class="container">
-          <img src="pic/welcome1.png" alt="Welcome" class="about">
+          <img src="welcome1.png" alt="Welcome" class="about">
         </div>
 
  
