--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
   </header>
   <main>
     <div class="image-container">
-        <img src="pic/about1.png" alt="Welcome" class="about">
+        <img src="about1.png" alt="Welcome" class="about">
       </div>
     
      
