--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 
     <h2>Send Me a Message</h2>
     <p>You can contact me through this message box!</p>
-    <form action="#" method="post">
+    <form action="https://formspree.io/f/mvgzrgwn" method="post">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
       
